# caffe_mutil_label_build_by_anaconda

./: CMakeCache.txt  CMakeLists.txt  CaffeConfig.cmake  CaffeTargets.cmake  Makefile  README.md  caffe_27.yml  caffe_36.yml  caffe_config.h  cmake_install.cmake
cmake/: Uninstall.cmake
docs/: Makefile  cmake_install.cmake
examples/: Makefile  cmake_install.cmake
examples/cifar10/: convert_cifar_data
examples/cpp_classification/: classification
examples/mnist/: convert_mnist_data
examples/siamese/: convert_mnist_siamese_data
include/caffe/proto/: caffe.pb.cc  caffe.pb.h  caffe_pb2.py
matlab/: Makefile  cmake_install.cmake
python/: Makefile  cmake_install.cmake
src/caffe/: Makefile  cmake_install.cmake
src/caffe/test/: Makefile  cmake_install.cmake
src/gtest/: Makefile  cmake_install.cmake
tools/: Makefile  caffe  cmake_install.cmake  compute_image_mean  convert_imageset  extract_features  upgrade_net_proto_binary  upgrade_net_proto_text  upgrade_solver_proto_text
